RESOLVED FIXED70242
Web Inspector: [Chromium] Different dimensions are reported for elements onscreen and in the Metrics pane
https://bugs.webkit.org/show_bug.cgi?id=70242
Summary Web Inspector: [Chromium] Different dimensions are reported for elements onsc...
Alexander Pavlov (apavlov)
Reported 2011-10-17 08:23:12 PDT
1. Search for something on google.com, inspect the results page <body> element 2. Change the page zoom, re-select the <body> element The element highlight tooltip and the Metrics pane display different dimensions for the <body> element.
Attachments
[PATCH] Suggested fix (3.06 KB, patch)
2011-10-17 08:32 PDT, Alexander Pavlov (apavlov)
pfeldman: review+
Alexander Pavlov (apavlov)
Comment 1 2011-10-17 08:32:22 PDT
Created attachment 111269 [details] [PATCH] Suggested fix The patch makes use of the dimensions equal to the element's offsetWidth/offsetHeight in the tooltip.
WebKit Review Bot
Comment 2 2011-10-17 08:34:20 PDT
Attachment 111269 [details] did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit', '--chromium']" exit_code: 2 Updating OpenSource Current branch master is up to date. Updating chromium port dependencies using gclient... Error: Can't switch the checkout to http://v8.googlecode.com/svn/branches/3.6@9637; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to http://v8.googlecode.com/svn/branches/3.6@9637; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to http://v8.googlecode.com/svn/branches/3.6@9637; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Error: 'depot_tools/gclient sync' failed 3 tries and returned 256 at Tools/Scripts/update-webkit-chromium line 107. Re-trying 'depot_tools/gclient sync' No such file or directory at Tools/Scripts/update-webkit line 104. If any of these errors are false positives, please file a bug against check-webkit-style.
John Mellor
Comment 3 2011-10-17 08:39:16 PDT
By the way, having the different dimensions (size in [scaled] CSS pixels vs size in [unscaled] device pixels) available can be useful, especially in environments where scaling is common. Ideally the Metrics pane might have a menu (like the Styles pane) letting you switch between CSS pixels and device pixels (this setting would apply to both the Metrics pane and the element highlight tooltip).
Vsevolod Vlasov
Comment 4 2011-10-17 11:30:39 PDT
This patch looks good, but while looking into it I found two somewhat related problems: https://bugs.webkit.org/show_bug.cgi?id=70250 https://bugs.webkit.org/show_bug.cgi?id=70252
Alexander Pavlov (apavlov)
Comment 5 2011-10-18 01:03:54 PDT
Alexander Pavlov (apavlov)
Comment 6 2011-11-11 06:34:54 PST
*** Bug 71974 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.