Web Inspector: [Chromium] Different dimensions are reported for elements onscreen and in the Metrics pane https://bugs.webkit.org/show_bug.cgi?id=70242

Reviewed by Pavel Feldman.

* inspector/DOMNodeHighlighter.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@97726 bbb929c8-8fbe-4397-9dbb-9b2b20218538